# NBA-stats-analysis

./: README.md  pyproject.toml
notebooks/: 01_nba_stats_scraping.ipynb  02_nba_stats_scraping.ipynb  03_nba_analysis.ipynb  nba_player_stats.csv
