[tool.poetry]
name = "nba-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "nba_analysis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
plotly = "^5.21.0"
matplotlib = "^3.8.4"
nbformat = "^5.10.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
